--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -232,6 +232,7 @@
   <ItemGroup>
     <ClCompile Include="src\Battler.cpp" />
     <ClCompile Include="src\Field.cpp" />
+    <ClCompile Include="src\FieldManager.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\GameObject.cpp" />
     <ClCompile Include="src\Main.cpp" />
@@ -245,6 +246,7 @@
     <ClInclude Include="src\Battler.h" />
     <ClInclude Include="src\Common.hpp" />
     <ClInclude Include="src\Field.h" />
+    <ClInclude Include="src\FieldManager.h" />
     <ClInclude Include="src\Game.hpp" />
     <ClInclude Include="src\GameObject.h" />
     <ClInclude Include="src\GameObjectManager.h" />
