--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -231,6 +231,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Battler.cpp" />
+    <ClCompile Include="src\EffectAnime.cpp" />
+    <ClCompile Include="src\EffectManager.cpp" />
     <ClCompile Include="src\Field.cpp" />
     <ClCompile Include="src\FieldManager.cpp" />
     <ClCompile Include="src\FieldReferee.cpp" />
@@ -239,6 +241,7 @@
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\ObjData.cpp" />
     <ClCompile Include="src\Player.cpp" />
+    <ClCompile Include="src\Skill.cpp" />
     <ClCompile Include="src\TiledGameObjectTexture.cpp" />
     <ClCompile Include="src\Title.cpp" />
   </ItemGroup>
@@ -246,6 +249,7 @@
     <ClInclude Include="src\Ability.h" />
     <ClInclude Include="src\Battler.h" />
     <ClInclude Include="src\Common.hpp" />
+    <ClInclude Include="src\EffectManager.h" />
     <ClInclude Include="src\Field.h" />
     <ClInclude Include="src\FieldManager.h" />
     <ClInclude Include="src\FieldReferee.h" />
@@ -254,6 +258,8 @@
     <ClInclude Include="src\GameObjectManager.h" />
     <ClInclude Include="src\ObjData.h" />
     <ClInclude Include="src\Player.h" />
+    <ClInclude Include="src\EffectAnime.h" />
+    <ClInclude Include="src\Skill.h" />
     <ClInclude Include="src\TiledGameObjectTexture.h" />
     <ClInclude Include="src\TiledMapTexture.h" />
     <ClInclude Include="src\Title.hpp" />
