--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -404,6 +404,9 @@
     <ClCompile Include="src\EffectAnime.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\ObjectBase.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Game.hpp">
@@ -455,6 +458,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\EffectManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ObjectBase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
